# project-starter-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .readthedocs.yml  .travis.yml  README.md  TODO.md  changelog.md  conftest.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
{{cookiecutter.project_name}}/.github/workflows/: codecov.yml
{{cookiecutter.project_name}}/docs/: README.md
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/docs/source/_templates/: navi.html
{{cookiecutter.project_name}}/gui/: .env.development  .env.production  package.json  vue.config.js
{{cookiecutter.project_name}}/gui/public/: index.html
{{cookiecutter.project_name}}/gui/src/: App.vue  main.js  router.js
{{cookiecutter.project_name}}/gui/src/App/: Alert.vue  App.vue  AppBar.vue  Develop.vue  Settings.vue
{{cookiecutter.project_name}}/gui/src/App/layout/: Alert.vue  AppBar.vue  Develop.vue  (+1 more)
{{cookiecutter.project_name}}/gui/src/assets/: font.css  formulate.css  my_css.css
{{cookiecutter.project_name}}/gui/src/components/: ComponentNonUnique.vue
{{cookiecutter.project_name}}/gui/src/plugins/: vuetify.js
{{cookiecutter.project_name}}/gui/src/store/: index.js
{{cookiecutter.project_name}}/gui/src/views/: Help.vue  Home.vue
{{cookiecutter.project_name}}/tests/: __init__.py  profiling.ipynb  test_it.py
{{cookiecutter.project_name}}/utils/: build_script.py  push_script.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  app.py  misc.py  store.py
(+13 files in other folders)
